--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
 	background-attachment: fixed;
 	background-position: center; 
-	background-size:100% 100%;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
 	font-family: 'Open Sans', sans-serif;
 	color: #aaa;
 	font-size: .9em;
@@ -39,7 +40,7 @@ aside {
 	width: auto;
 }
 #iphone {
-	margin-top: 70px;
+	margin-top: 20px;
 }
 #iphone img{
 	width: 750px;
@@ -63,7 +64,7 @@ a {
 	margin-top: 150px;
 }
 nav{
-	bottom: 20px; 
+	top: 85%; 
 	position: fixed; 
 	background-color: #fff;
 	padding: 10px 5px;
@@ -78,11 +79,13 @@ nav a{
 	color: #999;
 }
 #social{
-	bottom: 80px; 
-	left: 0px;
+	top: 40px; 
+	float: right;
+	right: 50px;
 	position: fixed; 
 	list-style: none;
 }
+#social li { display: inline; }
 #social img{
 	width: 40px;
 }
