--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	font-family: 'Open Sans', sans-serif;
-	color: #aaa;
+	color: #999;
 	font-size: .9em;
 	font-weight: bold;
 }
