--- a/css/style.css
+++ b/css/style.css
@@ -3,70 +3,56 @@ body {
 	background-position: center; 
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
-	font-family: 'Open Sans', sans-serif;
-	color: #999;
-	font-size: .9em;
+	color: #777 !important;
 	font-weight: bold;
 }
-#wrapper{
-	position: absolute;
+/*Home*/
+#logo{
+	margin-top: 40px;
+	height: 80px;
 }
-aside {
-	float: left; 
-	position: fixed; 
-	min-width: 200px;
-	width: 28%;
+#logo img{
+	width: 270px;
 }
-#v-menu {
-	margin-right: 20px;
+#title{
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	line-height: 1.2;
+	font-size: 1.8em;
+	font-weight: normal;
 }
-#v-menu ul {
+#social{
+	margin-top: 40px; 
 	list-style: none;
 	padding: 0;
-	border: none;
-	width: 40%;
-	float: right;
-	margin-left: 20px;
-	margin-right: 10px;
-	min-width: 170px;
 }
-#v-menu li {
-	border-bottom: 1px solid #aaa;
-}
-#v-menu li a {
-	display: block;
-	padding: 5px;
+#social li { display: inline; }
+#social img{ width: 30px;}
+#social a{
+	margin-right: 5px;
 	text-decoration: none;
-	width: auto;
 }
-#iphone {
-	margin-top: 20px;
+#store a{
+	display:inline-block;
+	overflow:hidden;
+	background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.png) no-repeat;
+	width:135px;
+	height:40px;
+	@media only screen{
+		background-image:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg);
+	}
 }
 #iphone img{
-	width: 750px;
-}
-#carousel{
-	position: relative;
-	top: -351px;
-	left: 76px;
-}
-#carousel img{
-	width: 595px;
-	height: 329px;
+	width: 700px;
 	display: none;
 }
-a {
-	color: #aaa;
+#description{
+	margin-top: 20px;
+	font-weight: normal;
 }
-#content{
-	position: inherit; 
-	margin-left: 30px;
-	margin-top: 150px;
-}
-nav{
-	top: 85%; 
-	position: fixed; 
-	background-color: #fff;
+#menu{
+	margin-top: 40px; 
 	padding: 10px 5px;
 	height: auto;
 	font-size: .8em;
@@ -75,40 +61,56 @@ nav{
 nav a{
 	margin-left: 40px;
 	margin-right: 30px;
+}
+#menu img{
+	height: 1em;
+    margin: 0 10px 2px 0;
+}
+a{
+	text-decoration: none !important;
+	color: #777 !important;
+}
+a:hover, a:focus{
+	text-decoration: none !important;
+	color: #000 !important;
+	background-color: transparent !important;
+}
+/*FAQ*/
+#faq{ font-weight: normal;}
+.active_link{ color: #000 !important}
+h5{ font-weight: bold;}
+#v-menu { margin-bottom: 20px;}
+#v-menu li {
+	border-bottom: 1px solid #aaa;
+	width: 70%;
+	min-width: 270px;
+}
+#v-menu li a {
+	display: block;
+	padding: 5px;
 	text-decoration: none;
-	color: #999;
-}
-#social{
-	top: 40px; 
-	float: right;
-	right: 50px;
-	position: fixed; 
-	list-style: none;
-}
-#social li { display: inline; }
-#social img{
-	width: 40px;
-}
-#social a{
-	margin-right: 5px;
-	text-decoration: none;
-}
-#logo{
-	margin-top: 40px;
-	margin-left: 30px;
-	height: 80px;
-}
-#logo img{
 	width: 270px;
+	text-align: justify;
 }
-#central_section{
-	position: relative; 
-	left: 350px; 
-	margin-bottom: 80px;
-}
-#play_faq, #play_dictionary, #play_news{
-	width: 15px;
-	height: 15px;
-	margin-top: 3px;
+#v-menu li a img{
 	float: right;
+	height: 1em;
+	margin-top: 2px;
+}
+span#title img{ padding-bottom: 7px;}
+.content{
+	position: inherit; 
+	width: :80%;
+	margin: 0 20px;
+	background-color: #fff;
+}
+@media only screen and (max-width : 992px) {
+	#social{
+		margin-top: 0; 
+	}
+}
+@media only screen and (max-width : 768px) {
+	body{ 
+		background-size: cover;
+	}
 }
