--- a/css/pictune.css
+++ b/css/pictune.css
@@ -25,10 +25,8 @@ h6 {
     font-size: 14px; 
 }
 
-.rightnav{
-    text-align: right;
-    vertical-align: middle;
-    margin-top: 1.5%;
+.applebadge {
+    padding-top: 1.3%;
 }
 
 .lead {
@@ -245,15 +243,6 @@ width: 50px;;
     padding-top: 10%;
 }
 
-.network-facebook{
-    text-align: right;
-    padding-left: 44%;
-}
-
-.network-twitter{
-    text-align: left;
-    padding-right: 44%;
-}
 
 body {
 	background-attachment: fixed;
@@ -372,3 +361,7 @@ span#title img{ padding-bottom: 7px;}
 		background-size: cover;
 	}
 }
+
+.fb {text-align: right;}
+
+.tw {text-align: left;}
